# vunit-py

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
example/: adder.sv
example/tests/: adder.py  adder_helper.py
vunit_py/: __init__.py  event_clock.py  module_parser.py  port.py  signal_helper.py  test.py  value.py
